fix(sidebars): filename wrapping

--- a/theme.css
+++ b/theme.css
@@ -3280,7 +3280,8 @@ body:not(.is-mobile) .prompt .suggestion-prefix.suggestion-prefix {
 ──────────────────────────────────────────────────── */
 
 body:not(.trim-long-filenames) {
-	--nav-item-white-space: wrap;
+	/* = wrap */
+	--nav-item-white-space: normal;
 }
 
 /* <<< Overlaying Sidebar */
